gke_config/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    app: cart

spec:
  replicas: 2
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cart

  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:

        - name: cart
          image: "gcr.io/elegant-fort-344208/cart:v1"
          imagePullPolicy: Always
  
          ports:
          - containerPort: 5006
            name: cart
