gke_config/memcached.yaml
apiVersion: v1
kind: Pod
metadata:
  name: some-memcached
  labels:
    name: some-memcached
spec:
  containers:
    - image: launcher.gcr.io/google/memcached1
      name: memcached
