gke_config/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order

spec:
  replicas: 2
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: order

  template:
    metadata:
      labels:
        app: order
    spec:
      containers:

        - name: order
          image: "gcr.io/elegant-fort-344208/order:v1"
          imagePullPolicy: Always
  
          ports:
          - containerPort: 5000
            name: order
