gke_config/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: payment
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: payment
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: payment
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: apikey
          image: gcr.io/composed-future-332501/payment:v1
          name: payment
          ports:
            - containerPort: 4242
          resources: {}
      restartPolicy: Always
status: {}
