gke_config/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: product
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: product
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: product
    spec:
      containers:
        - env:
            - name: AUTH_PROVIDER_X509_CERT_URL
            - name: AUTH_URI
            - name: CLIENT_EMAIL
            - name: CLIENT_ID
            - name: CLIENT_X509_CERT_URL
            - name: PRIVATE_KEY
            - name: PRIVATE_KEY_ID
            - name: PROJECT_ID
            - name: PYTHONUNBUFFERED
              value: "1"
            - name: TOKEN_URI
            - name: TYPE
          image: gcr.io/composed-future-332501/product:v1
          name: product
          ports:
            - containerPort: 5005
          resources: {}
      restartPolicy: Always
status: {}
