gke_config/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  labels:
    app: product

spec:
  replicas: 1
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: product

  template:
    metadata:
      labels:
        app: product
    spec:
      containers:

        - name: product
          image: "gcr.io/elegant-fort-344208/product:v1"
          imagePullPolicy: Always
  
          ports:
          - containerPort: 5005
            name: product
