gke_config/stock-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: stock
  name: stock
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: stock
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: stock
    spec:
      containers:
        - env:
            - name: DBNAME
            - name: INSTANCE_NAME
            - name: PASSWORD
            - name: PROJECT_ID
            - name: PUBLIC_IP_ADDRESS
            - name: PYTHONUNBUFFERED
              value: "1"
          image: gcr.io/elegant-fort-344208/stock:v1
          name: stock
          ports:
            - containerPort: 5001
          resources: {}
      restartPolicy: Always
status: {}
