gke_config/stock-order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  #   kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
  #   kompose.service.type: LoadBalancer
  #   kompose.version: 1.26.0 (40646f47)
  # creationTimestamp: null
  labels:
    # io.kompose.service: stock
    name: stock-cart
  name: stock-cart
spec:
  replicas: 2
  selector:
    matchLabels:
      # io.kompose.service: stock
      name: stock-order
  strategy: {}
  template:
    metadata:
      # annotations:
      #   kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
      #   kompose.service.type: LoadBalancer
      #   kompose.version: 1.26.0 (40646f47)
      # creationTimestamp: null
      labels:
        # io.kompose.service: stock
        name: stock-order
    spec:
      containers:
        # - env:
        #     - name: DBNAME
        #     - name: INSTANCE_NAME
        #     - name: PASSWORD
        #     - name: PROJECT_ID
        #     - name: PUBLIC_IP_ADDRESS
        #     - name: PYTHONUNBUFFERED
        #       value: "1"
        - name: stock
          image: gcr.io/elegant-fort-344208/stock:v1
          ports:
            - containerPort: 5001
          resources: {}
        - name: order 
          image: gcr.io/elegant-fort-344208/order:v1
          ports:
            - containerPort: 5000
      restartPolicy: Always
status: {}
