gke_config/stock-pubsub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-pubsub
  labels:
    app: stock-pubsub

spec:
  replicas: 2
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: stock-pubsub

  template:
    metadata:
      labels:
        app: stock-pubsub
    spec:
      containers:
        - name: stock-pubsub 
          image: "gcr.io/elegant-fort-344208/stock-pubsub:v1"
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
            name: stock-pubsub          
      restartPolicy: Always
