gke_config/stock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock
  labels:
    app: stock

spec:
  replicas: 2
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: stock

  template:
    metadata:
      labels:
        app: stock
    spec:
      containers:
        - name: stock 
          image: "gcr.io/elegant-fort-344208/stock:v1"
          imagePullPolicy: Always
          ports:
          - containerPort: 5001
            name: stock          
      restartPolicy: Always
