gke_config/useless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: useless
  labels:
    app: useless

spec:
  replicas: 1
  strategy: 
    type: RollingUpdate 
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: useless

  template:
    metadata:
      labels:
        app: useless
    spec:
      containers:
        - name: users 
          image: "gcr.io/elegant-fort-344208/useless:v1"
          imagePullPolicy: Always
          ports:
          - containerPort: 5050
            name: users          
      restartPolicy: Always
