gke_config/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # annotations:
  #   kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
  #   kompose.service.type: LoadBalancer
  #   kompose.version: 1.26.0 (40646f47)
  # creationTimestamp: null
  labels:
    name: users 
    # io.kompose.service: users
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      name: users 
      # io.kompose.service: users
  strategy: {}
  template:
    metadata:
      # annotations:
      #   kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
      #   kompose.service.type: LoadBalancer
      #   kompose.version: 1.26.0 (40646f47)
      # creationTimestamp: null
      labels:
        # io.kompose.service: users
        name: users 
    spec:
      containers:
        - env:
          # - name: DB_USER
          #   valueFrom:
          #     secretKeyRef:
          #       name: clae-cicd
          #       key: username
          # - name: DB_PASS
          #   valueFrom:
          #     secretKeyRef:
          #       name: L0llip0p0!
          #       key: password
          # - name: DB_NAME
          #   valueFrom:
          #     secretKeyRef:
          #       name: claecloudsql
          #       key: database        
          # - name: DB_HOST
          #   valueFrom: 
          #     secretKeyRef:
          #       name: 34.142.229.136:3306
          #       key: db_host
            # - name: DBNAME
            # - name: INSTANCE_NAME
            # - name: PASSWORD
            # - name: PROJECT_ID
            # - name: PUBLIC_IP_ADDRESS
            # - name: PYTHONUNBUFFERED
            #   value: "1"
          image: gcr.io/composed-future-332501/users:v1
          name: users
          ports:
            - containerPort: 5003
          resources: {}
      restartPolicy: Always
status: {}
