gke_config/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cart
  name: cart-lb
spec:
  type: NodePort
  selector:
    app: cart
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
