gke_config/cart-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
  #   kompose.service.type: LoadBalancer
  #   kompose.version: 1.26.0 (40646f47)
  # creationTimestamp: null
  labels:
    # io.kompose.service: cart-tcp
    name: cart
  name: cart
spec:
  ports:
    - name: "5006"
      port: 5006
      targetPort: 5006
  selector:
    # io.kompose.service: cart
    name: cart 
  # type: LoadBalancer
status:
  loadBalancer: {}
