gke_config/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order
  name: order-lb
spec:
  type: LoadBalancer
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
