gke_config/payment-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: payment-tcp
  name: payment-tcp
spec:
  ports:
    - name: "4242"
      port: 4242
      targetPort: 4242
  selector:
    io.kompose.service: payment
  type: LoadBalancer
status:
  loadBalancer: {}
