gke_config/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product-lb
spec:
  type: LoadBalancer
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 5005
