gke_config/stock-order-service.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   kompose.cmd: C:\Users\lingl\OneDrive\Documents\GitHub\cloud-mgmt\kompose.exe convert
  #   kompose.service.type: LoadBalancer
  #   kompose.version: 1.26.0 (40646f47)
  # creationTimestamp: null
  labels:
    # io.kompose.service: stock-tcp
    name: stock-order
  name: stock-order
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
    - name: "5000"
      port: 5000
      targetPort: 5000
  # selector:
    # io.kompose.service: stock
  type: LoadBalancer
status:
  loadBalancer: {}
