gke_config/stock-pubsub-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock-pubsub
  name: stock-pubsub-lb
spec:
  type: LoadBalancer
  selector:
    app: stock-pubsub
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
