gke_config/stock-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stock
  name: stock-lb
spec:
  type: LoadBalancer
  selector:
    app: stock
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
