gke_config/useless-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: useless
  name: useless-lb
spec:
  type: LoadBalancer
  selector:
    app: useless
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
