gke_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  rules:
    - http:
        paths:
          - path: /product
            pathType: Prefix 
            backend:
              service:
                name: product-lb
                port:
                  number: 5005
